@@ -7,32 +7,29 @@ import db.entities.Session;
 import db.entities.Url;
 import gui.GettingStartedView;
 import gui.container.RuleContainer;
-import javafx.collections.FXCollections;
-import javafx.collections.ObservableList;
 import model.SessionViewModel;
 import utils.Logger;
 
 import java.util.*;
+import java.util.concurrent.*;
 import java.util.stream.Collectors;
 
 // InputParameter Entities are being saved via the corresponding URL Entity where the parameter appeared
 // Hence keeping track of the URL Entities is enough because they contain the Parameters
 public class ParameterHandler {
 
-    public Hashtable<Integer, Url> urlStorage;
-    public Hashtable<Integer, InputParameter> parameterStorage;
-    public Hashtable<Integer, InputValue> parameterValueStorage;
-    public ObservableList<InputParameter> observableInputParameterList;
-    public ObservableList<InputParameter> observableInputParameterListSession;
-
+    public ConcurrentHashMap<Integer, Url> urlStorage;
+    public ConcurrentHashMap<Integer, InputParameter> inputParameterStorage;
+    public ConcurrentHashMap<Integer, InputValue> inputValueStorage;
+    public List<InputParameter> allInputParametersList;
     private boolean hasActiveSession = false;
     private String sessionName;
+
     public ParameterHandler() {
-        this.urlStorage = new Hashtable<>();
-        this.parameterStorage = new Hashtable<>();
-        this.parameterValueStorage = new Hashtable<>();
-        this.observableInputParameterList = FXCollections.observableArrayList();
-        this.observableInputParameterListSession = FXCollections.observableArrayList();
+        this.urlStorage = new ConcurrentHashMap<>();
+        this.inputParameterStorage = new ConcurrentHashMap<>();
+        this.inputValueStorage = new ConcurrentHashMap<>();
+        this.allInputParametersList = Collections.synchronizedList(new ArrayList<InputParameter>());
         loadUrls();
         loadParameters();
         loadParameterOccurrences();
@@ -47,14 +44,14 @@ public class ParameterHandler {
     public void loadParameters() {
        List<InputParameter> inputParameterEntityList = DBModel.loadAllParameters().stream().toList();
        List<Integer> identifiers = inputParameterEntityList.stream().map(InputParameter::getIdentifier).toList();
-       parameterStorage.putAll(combineListsIntoParameterEntityMap(identifiers, inputParameterEntityList));
-       observableInputParameterList.addAll(inputParameterEntityList);
+       inputParameterStorage.putAll(combineListsIntoParameterEntityMap(identifiers, inputParameterEntityList));
+       allInputParametersList.addAll(inputParameterEntityList);
     }
 
     public void loadParameterOccurrences() {
         List<InputValue> inputValueEntityList = DBModel.loadAllParameterOccurrenceEntities().stream().toList();
         List<Integer> identifiers = inputValueEntityList.stream().map(InputValue::getIdentifier).toList();
-        parameterValueStorage.putAll(combineListsIntoParameterOccurrenceMap(identifiers, inputValueEntityList));
+        inputValueStorage.putAll(combineListsIntoParameterOccurrenceMap(identifiers, inputValueEntityList));
     }
 
     Map<Integer, InputParameter> combineListsIntoParameterEntityMap(List<Integer> keys, List<InputParameter> values) {
@@ -101,7 +98,10 @@ public class ParameterHandler {
      * to the DB
         @param parameterHelper InputParameter to be added
      */
-    private void addParameterToDB(ParameterHelperClass parameterHelper, String messageHash) {
+    private List<Object> addParameterToDB(ParameterHelperClass parameterHelper, String messageHash) {
+
+        List<Object> returnList = new ArrayList<>();
+
         String name = parameterHelper.getName();
         String type = parameterHelper.getType().getName();
         String domain = parameterHelper.getDomain();
@@ -115,7 +115,6 @@ public class ParameterHandler {
             Session session = SessionViewModel.sessionTable.get(this.sessionName);
             if (session != null) {
                 session.addInputValue(newInputValue);
-                DBModel.saveSession(session);
                 SessionViewModel.sessionTable.put(this.sessionName, session);
             }
         }
@@ -125,72 +124,111 @@ public class ParameterHandler {
         // Check if the URL Entity already exists in the DB
         // If not, add it to the list of known Urls and save the Url + InputParameter in the DB
         if (!urlExistsInDB(newUrlEntity)) {
-            newInputParameterEntity.addOccurence(newInputValue);
-            this.parameterValueStorage.put(newInputValue.getIdentifier(), newInputValue);
+            if (!newInputValue.getValue().isEmpty()) {
+                newInputParameterEntity.addOccurrence(newInputValue);
+                this.inputValueStorage.put(newInputValue.getIdentifier(), newInputValue);
+            }
             newUrlEntity.addParameterFoundInUrl(newInputParameterEntity);
             this.urlStorage.put(newUrlEntity.getIdentifier(), newUrlEntity);
-            parameterStorage.put(newInputParameterEntity.getIdentifier(), newInputParameterEntity);
-            GettingStartedView.numberOfParameterValues.setText(String.valueOf(parameterValueStorage.size()));
-            GettingStartedView.numberOfParameters.setText(String.valueOf(parameterStorage.size()));
-            GettingStartedView.numberOfUrls.setText(String.valueOf(urlStorage.size()));
-            DBModel.saveParameter(newInputParameterEntity);
-            DBModel.saveURL(newUrlEntity);
-            this.observableInputParameterList.add(newInputParameterEntity);
-            if (newInputValue.getSession().equals(sessionName)) {
-                this.observableInputParameterListSession.add(newInputParameterEntity);
-            }
+            inputParameterStorage.put(newInputParameterEntity.getIdentifier(), newInputParameterEntity);
+            this.allInputParametersList.add(newInputParameterEntity);
+            returnList.add(newInputParameterEntity);
+            returnList.add(newUrlEntity);
         } else {
             // If the URL Entity already exists get the correct Url Entity where the InputParameter Entity is to be added
             Url relatedUrlEntity = getUrlEntityByParameterUrl(parameterHelper.getUrlFound());
             // Check if Relationship to InputParameter already exists, this is the case if the URLs get loaded at start
             if (!parameterExistsInUrlEntity(relatedUrlEntity, newInputParameterEntity)) {
-                if(!occurrenceAlreadyExists(newInputValue)) {
-                    newInputParameterEntity.addOccurence(newInputValue);
-                    this.parameterValueStorage.put(newInputValue.getIdentifier(), newInputValue);
-                    GettingStartedView.numberOfParameterValues.setText(String.valueOf(parameterValueStorage.size()));
-                    if (newInputValue.getSession().equals(sessionName)) {
-                        this.observableInputParameterListSession.add(newInputParameterEntity);
-                    }
+                if(!occurrenceAlreadyExists(newInputValue, newInputParameterEntity) && !newInputValue.getValue().isEmpty()) {
+                    newInputParameterEntity.addOccurrence(newInputValue);
+                    this.inputValueStorage.put(newInputValue.getIdentifier(), newInputValue);
                 }
                 relatedUrlEntity.addParameterFoundInUrl(newInputParameterEntity);
-                parameterStorage.put(newInputParameterEntity.getIdentifier(), newInputParameterEntity);
-                GettingStartedView.numberOfParameters.setText(String.valueOf(parameterStorage.size()));
-                DBModel.saveParameter(newInputParameterEntity);
-                DBModel.saveURL(relatedUrlEntity);
-                this.observableInputParameterList.add(newInputParameterEntity);
+                inputParameterStorage.put(newInputParameterEntity.getIdentifier(), newInputParameterEntity);
+                this.allInputParametersList.add(newInputParameterEntity);
+                returnList.add(newInputParameterEntity);
+                returnList.add(relatedUrlEntity);
             } else {
                 InputParameter existingEntity = getExistingParameter(newInputParameterEntity.getIdentifier());
-                if (!occurrenceAlreadyExists(newInputValue)) {
-                    existingEntity.addOccurence(newInputValue);
-                    this.parameterValueStorage.put(newInputValue.getIdentifier(), newInputValue);
-                    GettingStartedView.numberOfParameterValues.setText(String.valueOf(parameterValueStorage.size()));
-                    DBModel.saveParameter(existingEntity);
-                    this.observableInputParameterList.add(newInputParameterEntity);
-                    if (newInputValue.getSession().equals(sessionName)) {
-                        this.observableInputParameterListSession.add(newInputParameterEntity);
-                    }
+                if (!occurrenceAlreadyExists(newInputValue, existingEntity) && !newInputValue.getValue().isEmpty()) {
+                    existingEntity.addOccurrence(newInputValue);
+                    this.inputValueStorage.put(newInputValue.getIdentifier(), newInputValue);
+                    this.allInputParametersList.add(newInputParameterEntity);
+                    returnList.add(existingEntity);
                 }
             }
         }
+
+        return returnList;
     }
 
-    public void addParameters(Collection<ParameterHelperClass> oldParameterCollection, String messageHash) {
-        for (ParameterHelperClass oldParameter : oldParameterCollection) {
-            addParameterToDB(oldParameter, messageHash);
+    class AddParametersCallable implements Callable<List<Object>> {
+        private ParameterHelperClass parameter;
+        private String messageHash;
+
+        AddParametersCallable(ParameterHelperClass parameter, String messageHash) {
+            this.parameter = parameter;
+            this.messageHash = messageHash;
+        }
+
+        @Override
+        public List<Object> call() {
+            return addParameterToDB(parameter, messageHash);
         }
     }
 
-    private InputParameter getExistingParameter(int identifier) {
-        return parameterStorage.get(identifier);
+    public List<Object> addParametersThreaded(Collection<ParameterHelperClass> oldParameterCollection, String messageHash) {
+        List<Future<List<Object>>> futures = new ArrayList<>();
+        ExecutorService executor = Executors.newFixedThreadPool(Runtime.getRuntime().availableProcessors());
+        for (ParameterHelperClass oldParameter : oldParameterCollection) {
+            Future<List<Object>> future = executor.submit(new AddParametersCallable(oldParameter, messageHash));
+            futures.add(future);
+        }
+        List<Object> results = new ArrayList<>();
+        for (Future<List<Object>> future : futures) {
+            try {
+                results.addAll(future.get());
+            } catch (InterruptedException | ExecutionException e) {
+                e.printStackTrace();
+            }
+        }
+
+        executor.shutdown();
+
+        GettingStartedView.numberOfParameters.setText(String.valueOf(inputParameterStorage.size()));
+        GettingStartedView.numberOfParameterValues.setText(String.valueOf(inputValueStorage.size()));
+        GettingStartedView.numberOfUrls.setText(String.valueOf(urlStorage.size()));
+
+        return results;
     }
 
-    private boolean occurrenceAlreadyExists(InputValue newInputValueEntity) {
-        return this.parameterValueStorage.containsKey(newInputValueEntity.getIdentifier());
+    public List<Object> addParameters(Collection<ParameterHelperClass> parameters, String messageHash) {
+        List<Object> returnList = new ArrayList<>();
+        for (ParameterHelperClass param : parameters) {
+            returnList.addAll(addParameterToDB(param, messageHash));
+        }
+
+        GettingStartedView.numberOfParameters.setText(String.valueOf(inputParameterStorage.size()));
+        GettingStartedView.numberOfParameterValues.setText(String.valueOf(inputValueStorage.size()));
+        GettingStartedView.numberOfUrls.setText(String.valueOf(urlStorage.size()));
+
+        return returnList;
+    }
+
+    private InputParameter getExistingParameter(int identifier) {
+        return inputParameterStorage.get(identifier);
+    }
+
+    private boolean occurrenceAlreadyExists(InputValue newInputValueEntity, InputParameter newInputParameterEntity) {
+        return newInputParameterEntity.getOccurrenceEntities().parallelStream().anyMatch(inputValue -> inputValue.getIdentifier() == newInputValueEntity.getIdentifier());
     }
 
     private boolean parameterExistsInUrlEntity(Url relatedUrlEntity, InputParameter newInputParameterEntity) {
         int identifier = newInputParameterEntity.getIdentifier();
-        return relatedUrlEntity.getFoundInParameterList().stream().map(InputParameter::getIdentifier).toList().contains(identifier);
+        List<InputParameter> list = Collections.synchronizedList(new ArrayList<>());
+        list.addAll(relatedUrlEntity.getFoundInParameterList());
+
+        return list.stream().parallel().map(InputParameter::getIdentifier).collect(Collectors.toList()).contains(identifier);
     }
 
     private boolean urlExistsInDB(Url urlEntity) {
@@ -203,12 +241,12 @@ public class ParameterHandler {
         return urlStorage.get(identifier);
     }
 
-    public Hashtable<Integer, Url> getUrlStorage() {
+    public ConcurrentHashMap<Integer, Url> getUrlStorage() {
         return urlStorage;
     }
 
     public List<InputParameter> getAllParameters(){
-        return parameterStorage.values().stream().toList();
+        return inputParameterStorage.values().stream().toList();
     }
     public List<InputParameter> getRelevant(String domain){
         var all = this.getAllParameters();
@@ -231,15 +269,14 @@ public class ParameterHandler {
     }
 
     public void clearAllStorages() {
-        parameterStorage.clear();
-        parameterValueStorage.clear();
+        inputParameterStorage.clear();
+        inputValueStorage.clear();
         urlStorage.clear();
-        observableInputParameterList.clear();
-        observableInputParameterListSession.clear();
+        allInputParametersList.clear();
     }
 
     public void updateParameterExclusion(RuleContainer ruleContainer) {
-        RegexMatcher.excludeParametersForSingleRule(this.observableInputParameterList, ruleContainer);
+        RegexMatcher.excludeParametersForSingleRule(this.allInputParametersList, ruleContainer);
         if (hasActiveSession) {
             // Update exclusion on InputValues linked to Sessions
             var keys = SessionViewModel.sessionTable.keys().asIterator();
